--- a/app/src/main/res/layout/activity_qi_chat_variables_tutorial.xml
+++ b/app/src/main/res/layout/activity_qi_chat_variables_tutorial.xml
@@ -29,6 +29,8 @@
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+<!--    Todo: binnen de xml files in de tag 'editText' zoeken a.d.h.v. het id-->
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
